[package]
name = "tiny-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
burn = { version = "0.11.1", features = ["wgpu"] }
tokenizers = { version = "0.15.0", features = ["hf-hub", "http"] }
